# wolf

./: README.md  doc.md  setup.cfg  wolf-latest-Linux-x86_64.sh
config/technodes/tsmc65/: tsmc65.bucket.template.csh  tsmc65.ip.setup.template.wlf  tsmc65.stacks.template.wlf
templates/: activate.template  deactivate.template  update.template
templates/gf22/: gf22.constraints.template.sdc  gf22.env.template.csh  gf22.floorplan.template.tcl  gf22.setup.template.yaml
templates/tsmc28/: tsmc28.constraints.template.sdc  tsmc28.env.template.csh  tsmc28.floorplan.template.tcl  tsmc28.setup.template.yaml
templates/tsmc65/: tsmc65.constraints.template.sdc  tsmc65.env.template.csh  tsmc65.floorplan.template.tcl  tsmc65.setup.template.yaml
