[metadata]
name = wolf
version = 0.0.1
author = Manuel Blanco Valentin
author_email = manuel.blanco.valentin@gmail.com
description = Wolf is a utility for automatic digital flow setup, maintainance and execution with Cadence tools.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/manuelblancovalentin/wolf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Linux
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
scripts=['bin/autorecursivelink.tcl', 'bin/defs', 'bin/flow_yaml_parser.py', 'bin/utils', 'bin/wolf.autocomplete.sh','bin/wolf.env','bin/wolf.init.sh','bin/wolf.ipman','bin/wolf.run','bin/wolf.wizard']